--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -20,6 +20,22 @@ body {
     font-size: 1.2em;
 }
 
+.icon-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    border-radius: 50%;
+}
+
+.button-image {
+    width: 24px;
+    height: 24px;
+}
+
 .controls {
     display: flex;
     align-items: center;
