better? installers create shortcuts buttons in app

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -412,6 +412,15 @@ body.logs-visible .main-content {
     height: 20px;
 }
 
+#shortcut-options-container .button-group {
+    justify-content: center; /* Center the buttons within the group */
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+#shortcut-options-container button {
+    width: fit-content;
+}
+
 .hidden {
     display: none !important;
 }
