--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -28,22 +28,8 @@ body {
     color: var(--text-color);
 }
 
-.top-bar, .card {
-    background-color: var(--card-bg);
-}
-.top-bar {
-    border-bottom-color: var(--button-bg);
-}
-
-button, select {
-    background-color: var(--button-bg);
-    color: var(--button-text);
-    border: 1px solid transparent;
-}
-
-#start-btn {
-    background-color: var(--primary-button-bg);
-    color: var(--primary-button-text);
+a {
+    color: #cba8ff;
 }
 
 body.light-mode .light-icon {
@@ -67,6 +53,52 @@ body.dark-mode .icon-button:hover {
     background-color: #333333;
 }
 
+/* Scrollbar Styling */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--button-bg) var(--card-bg);
+}
+
+*::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    background: var(--card-bg);
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--button-bg);
+    border-radius: 10px;
+    border: 2px solid var(--card-bg);
+    transition: background-color 0.25s ease, border-color 0.25s ease;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: var(--accent-color);
+    border-color: var(--card-bg);
+}
+
+.top-bar, .card {
+    background-color: var(--card-bg);
+}
+.top-bar {
+    border-bottom-color: var(--button-bg);
+}
+
+button, select {
+    background-color: var(--button-bg);
+    color: var(--button-text);
+    border: 1px solid transparent;
+}
+
+#start-btn {
+    background-color: var(--primary-button-bg);
+    color: var(--primary-button-text);
+}
+
 #port-input {
     background-color: var(--card-bg);
     color: var(--text-color);
@@ -87,6 +119,28 @@ body.dark-mode .icon-button:hover {
 }
 #server-status-indicator.status-stopped {
     background-color: #e74c3c;
+}
+
+input[type="time"] {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid var(--button-bg);
+    background-color: var(--card-bg);
+    color: var(--text-color);
+    transition: border-color 0.2s ease, background-color 0.2s ease;
+}
+
+input[type="time"]:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+    display: none; /* Remove calendar picker as can't be styled*/
+}
+
+.weekday-row {
+    border-bottom: 1px solid var(--button-bg);
 }
 
 .password-wrapper input, #initial-password-display {
@@ -112,4 +166,16 @@ body.dark-mode .icon-button:hover {
 .app-footer {
     background-color: var(--card-bg); /* Use the card background for consistency */
     border-top-color: var(--button-bg);
+}
+
+.toast {
+    color: #ffffff;
+}
+
+.toast-info {
+    background-color: #2c3e50; /* A dark blue/grey */
+}
+
+.toast-error {
+    background-color: #c0392b; /* A strong red */
 }
