update session expire; httpTerminator; better save-setting ipc; updated show unlocked handling; fix db init issues; restructure lang files;

--- a/app/css/components.css
+++ b/app/css/components.css
@@ -118,3 +118,18 @@ button:disabled:active {
     font-size: 1em;
     border-radius: 5px;
 }
+
+input[type="number"] {
+    margin: 10px;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 80px;
+}
+
+/* remove number input spinners */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
