--- a/src/renderer/css/modals.css
+++ b/src/renderer/css/modals.css
@@ -88,7 +88,7 @@
 .weekday-list {
     list-style: none;
     padding: 0;
-    margin: 20px 0;
+    margin-top: 10px;
 }
 
 .weekday-row {
@@ -118,9 +118,8 @@
     width: 30px;
     height: 30px;
     line-height: 1; /* Helps center text/icons */
-
-    /* Push it to the far right */
-    margin-left: auto;
+    opacity: 0.4;
+    background: none; /* No 'shadow' around icon */
 }
 
 
@@ -168,6 +167,18 @@
     font-size: 0.9em;
 }
 
+
+/* --- Update modal --- */
+.release-notes-container {
+    max-height: 200px;
+    overflow-y: auto;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 10px;
+    margin: 15px 0;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    white-space: pre-wrap; /* Respects newlines from the release notes */
+}
 
 /* --- Confirmation Modal --- */
 #confirm-modal {
