--- a/public/login.css
+++ b/public/login.css
@@ -23,6 +23,11 @@ html, body {
     align-items: center;
 }
 
+img {
+    width: 35px;
+    height: 35px;
+}
+
 /* --- Login Container Card --- */
 .login-container {
     background-color: var(--container-color);
@@ -45,6 +50,13 @@ html, body {
     font-weight: 600;
     text-align: center;
     color: #ffffff;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
 }
 
 /* --- Form Elements --- */
