--- a/sites/docs/views/partials/header.ejs
+++ b/sites/docs/views/partials/header.ejs
@@ -1,32 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %> | InStep Docs</title>
-    <link rel="stylesheet" href="/docs/assets/css/styles.css">
-    <link rel="icon" type="image/png" href="/assets/icon.png">
-</head>
-<body>
-
-<header class="header">
+<header>
     <div class="header-left">
-        <img src="/assets/icon.png" alt="Logo" class="logo">
+        <a href="<%= baseRoute %>">
+            <img src="/assets/icon.png" alt="InStep Logo" class="logo-icon">
+        </a>
     </div>
-    <div class="header-center">
+
+    <div class="header-center" data-i18n="header.title">
         <%= title %>
     </div>
+
     <div class="header-right">
-        <!-- Globe Icon -->
-        <svg class="icon" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.62-1.23 4.96-3.1 6.39z"/></svg>
-        <!-- Theme Icon -->
-        <svg class="icon" viewBox="0 0 24 24"><path d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-3.31 0-6-2.69-6-6 0-1.82.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1z"/></svg>
-        <!-- GitHub Icon -->
-        <a href="https://github.com/DKrois/InStepServer" target="_blank">
-            <svg class="icon" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17 6.84 9.5.5.09.68-.22.68-.48 0-.24-.01-1.02-.01-1.85-2.78.6-3.37-1.18-3.37-1.18-.45-1.15-1.11-1.46-1.11-1.46-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.9 1.52 2.34 1.08 2.91.83.09-.65.35-1.08.63-1.33-2.22-.25-4.55-1.11-4.55-4.94 0-1.1.39-1.99 1.03-2.69-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.6 1.03 2.69 0 3.84-2.34 4.68-4.57 4.93.36.31.68.92.68 1.85 0 1.34-.01 2.42-.01 2.75 0 .27.18.58.69.48C19.13 20.17 22 16.42 22 12c0-5.52-4.48-10-10-10z"/></svg>
+        <!-- Language Switcher -->
+        <div class="lang-dropdown-container">
+            <button id="lang-switcher-btn" class="icon-btn" title="Switch Language">
+                <img src="<%= docsImages %>/language-dark.png" class="lang-icon" alt="Language">
+                <!-- Shows current lang code -->
+                <span id="current-lang-label" style="font-size: 0.8rem; margin-left:5px; text-transform: uppercase;">EN</span>
+            </button>
+
+            <div id="lang-menu" class="lang-dropdown-menu">
+                <button class="lang-option" data-lang="en">
+                    English
+                </button>
+                <button class="lang-option" data-lang="de">
+                    Deutsch
+                </button>
+            </div>
+        </div>
+
+        <!-- Theme Switcher -->
+        <button id="theme-toggle" class="icon-btn" title="Toggle Theme">
+            <img id="theme-icon" src="<%= docsImages %>/darkmode.png" class="theme-icon" alt="Theme">
+        </button>
+
+        <!-- GitHub -->
+        <a href="https://github.com/DKrois/InStepServer" target="_blank" class="icon-btn" title="GitHub Repo">
+            <svg class="github-svg" viewBox="0 0 24 24">
+                <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/>
+            </svg>
         </a>
     </div>
 </header>
-<div class="container">
-    <%- include('../partials/sidebar') %>
-    <main class="main-content">
