gui: link to docs

--- a/src/renderer/css/layout.css
+++ b/src/renderer/css/layout.css
@@ -67,6 +67,10 @@ hr {
     margin-left: auto;
 }
 
+.small {
+    font-size: smaller;
+    color: #aaaaaa;
+}
 
 /* --- Sidebar (Statistics) --- */
 .sidebar {
