--- a/src/renderer/css/layout.css
+++ b/src/renderer/css/layout.css
@@ -100,11 +100,16 @@ body.stats-visible .sidebar {
     box-sizing: border-box;
 }
 
-#app-version {
+.sidebar-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 12px;
+
+    /* at the bottom */
     position: absolute;
-    bottom: 50px;
-    right: 0; /* bottom right */
-    font-size: 14px;
+    bottom: 60px;
+    width: 90%;
 }
 
 
