server: fix random-id & PUT proj; gui: fix qr modal animation; esc for modal close

--- a/src/renderer/css/layout.css
+++ b/src/renderer/css/layout.css
@@ -64,7 +64,9 @@ hr {
 
 /* --- Utility --- */
 .hidden {
-    display: none !important;
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
 }
 
 .no-click {
